Take out weird z-indexing, fixes #555

--- a/assets/styles/sass/hire.scss
+++ b/assets/styles/sass/hire.scss
@@ -36,9 +36,6 @@
   .trl {
     display: block; 
   }
-  .login-wrapper {
-    z-index: 5;
-  }
   .login-blurb {
     font-size: 1.8rem; 
   }
